# meshx-device-mesh

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docs/: whitepaper.md
prototype/: simulate_mesh.py
src/: Cargo.toml  main.rs  proof_of_presence.rs
