[package]
name = "meshx-node"
version = "0.1.0"
edition = "2021"
authors = ["MeshX Foundation <dev@meshx.network>"]
description = "MeshX - The Immutable Global Device Mesh"
license = "MIT"
repository = "https://github.com/RealHaywoodJ/meshx-device-mesh"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = "2.1"
sha3 = "0.10"
rand = "0.8"
blake3 = "1.5"

# Networking
libp2p = "0.53"
quinn = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# TEE Support (optional features)
sgx_tstd = { version = "1.1.6", optional = true }
sgx_types = { version = "1.1.6", optional = true }

[features]
default = []
sgx = ["sgx_tstd", "sgx_types"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1